--- a/package.json
+++ b/package.json
@@ -3,18 +3,58 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.10.5",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.12.7",
+    "@babel/runtime": "^7.10.5",
+    "@reach/disclosure": "^0.10.5",
+    "@reach/menu-button": "^0.10.5",
+    "@reach/tabs": "^0.10.5",
+    "@tlon/indigo-light": "^1.0.5",
+    "@tlon/indigo-react": "^1.2.8",
+    "@types/lodash": "^4.14.155",
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.2",
+    "@types/styled-system": "^5.1.10",
+    "@types/yup": "^0.29.7",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "azimuth-js": "^0.22.1",
+    "classnames": "^2.2.6",
+    "css-loader": "^3.5.3",
+    "formik": "^2.2.0",
+    "fs-extra": "^8.1.0",
+    "i": "^0.3.6",
+    "lodash": "^4.17.21",
+    "markdown-to-jsx": "^7.0.1",
+    "moment": "^2.29.1",
+    "moment-locales-webpack-plugin": "^1.2.0",
+    "mousetrap": "^1.6.3",
+    "mv": "^2.1.1",
+    "npm": "^6.14.11",
+    "promise": "^8.0.3",
+    "prompt": "^1.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "replace-in-file": "^4.1.1",
+    "style-loader": "^1.2.1",
+    "styled-components": "^5.2.0",
+    "styled-system": "^5.1.5",
+    "suncalc": "^1.8.0",
+    "typescript": "^4.1.3",
+    "urbit-ob": "^5.0.1",
+    "urbit-sigil-js": "^1.3.13",
+    "web-vitals": "^1.0.1",
+    "zustand": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
