--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reach/tabs": "^0.10.5",
     "@tlon/indigo-light": "^1.0.5",
     "@tlon/indigo-react": "^1.2.8",
+    "@tlon/sigil-js": "^1.4.3",
     "@types/lodash": "^4.14.155",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
@@ -38,6 +39,7 @@
     "moment-locales-webpack-plugin": "^1.2.0",
     "mousetrap": "^1.6.3",
     "mv": "^2.1.1",
+    "node-sass": "^6.0.1",
     "npm": "^6.14.11",
     "promise": "^8.0.3",
     "prompt": "^1.0.0",
@@ -51,6 +53,7 @@
     "styled-system": "^5.1.5",
     "suncalc": "^1.8.0",
     "typescript": "^4.1.3",
+    "urbit-key-generation": "^0.19.0",
     "urbit-ob": "^5.0.1",
     "urbit-sigil-js": "^1.3.13",
     "web-vitals": "^1.0.1",
