--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cp .ropsten-env .env && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
