--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.10.5",
+    "@radix-ui/react-dropdown-menu": "^0.1.1",
     "@reach/disclosure": "^0.10.5",
     "@reach/menu-button": "^0.10.5",
     "@reach/tabs": "^0.10.5",
