--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "prompt": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.45.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
     "replace-in-file": "^4.1.1",
